--- a/client/src/Components/Card.module.css
+++ b/client/src/Components/Card.module.css
@@ -26,16 +26,17 @@
 }
 
 .CardTitle{
-    color: #FFFFFF;
+    color: #92127f;
     height: 2px;
 }
 
 .CardText{
-    color: #FFFFFF;
+    color: #92127f;
 }
 .Detail{
     background-color: rgba(255, 255, 255, 0.572);
     border-radius: 10%;
     padding: 2px 2px;
     color: #900bc8;
+    -webkit-text-stroke: 0.5px rgb(0, 0, 0);
 }
