--- a/client/src/Vistas/Styles/Quiz.module.css
+++ b/client/src/Vistas/Styles/Quiz.module.css
@@ -35,6 +35,7 @@
     width: fit-content;
     padding: 2%;
     margin: 5px;
+    box-shadow: 1px 1px 5px 1px rgba(176,0,141,0.58);
 }
 .CardAlikeDetail{
     color: #a60ce8;
